<resources>
    <string name="app_name">E-Commerce App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>

    <string name="privacy_question_1">What Do We Do with Your Information?</string>
    <string name="privacy_question_2">Third Party Policy</string>
    <string name="privacy_question_3">Security of Your Information</string>

    <string name="privacy1">Welcome to Monarch Mart Ltd. We respect your privacy and want to protect your personal information. As a customer centric company we are set to protect customer rights and purchase safety to the maximum.To learn more, please read this Privacy Policy.</string>
    <string name="privacy2">Monarch Mart website or app may collect various types of required information if a customer wants to place an order for the desired product he or she wants to buy using the website or app. When a customer purchases something from Monarch Mart through the website or app, as part of the buying and selling process, Monarch Mart will collect the personal information of the customer such as his or her name, contact number, delivery address and email address etc.. The company will receive, store and process this data for preparing customers purchased orders on the eCommerce site and will save it for any possible future allegation. Monarch Mart usually collects personal information such as customers name, gender, email address, delivery address, mobile number, payment procedure  and other similar kinds of information. When a customer browses Monarch Mart website or app, the system will automatically receive the computers internet protocol (IP) address in order to provide information that helps us to learn about the customers browser and operating system. With customers permission, the company may send emails to him/her about our offers, campaigns, new categories and products,and other helpful updates.</string>
    <string name="privacy3">Monarch Mart may pass customer details to other companies that it is affiliated with only for the purpose of providing better service toward customers. Monarch Mart may somewhat pass customer details to  their agents and subcontractors to help with analyzing data and providing them with marketing or customer  service assistance. The company may also use third parties to assist in delivering products to customers and to help them in collecting payments from them. In general, the third-party providers used by the company will only collect, use and disclose customers information to the extent necessary to allow them to perform the services they provide to the company. However, certain third-party service providers, such as payment gateways and other payment transaction processors, have their own privacy policies in respect to the information that the company is required to provide to them for customers purchase related transactions.</string>
    <string name="privacy4">To protect customers personal information, Monarch Mart	take reasonable precautions and follows industry best practices in information  security and documentation	process make sure it is not inappropriately  lost,  misused, accessed, disclosed, altered or destroyed. If a customer  provides credit card information to the company,the information  is encrypted using  secure socket layer technology. Although no method of transmission over the Internet or electronic storage is 100% secure, the company follows all PCl-DSS requirements and implements additional generally accepted industry  standards. Monarch Mart	may disclose customers personal information to the government authority	if it is required by law to do so or if the customer violates the Terms of Service. Visit the Terms and Conditions page to  learn  more about  the  complete  terms  of service.</string>

    <string name="terms">Welcome to Monarch Mart Ltd. We are an online marketplace and these are the terms and conditions governing your access and use of Monarch Mart along with its related sub-domains, sites, mobile app, services and other tools. By using the Site, you hereby accept these terms and conditions and represent that you agree to comply with these terms and conditions.</string>

    <string name="terms1">By agreeing to these Terms of Service, you represent that you are at the age of majority in your present State or Province of residence, or that you have given us your consent to allow any of your minor dependents to use this website where you are the age of majority in your State or Province of residence.

You may not use our products for any illegal or unauthorized purpose nor may you in the use of the service, violate any laws in your jurisdiction. You must not transmit any worms or viruses or any code of a destructive nature. A breach or violation of any of the Terms will result in an immediate termination of your Services.</string>

    <string name="terms2">All prices are subject to change without notification, and while every effort is made to ensure the accuracy of the prices displayed on Monarch Mart, they are not guaranteed to be accurate. If any price is different from that displayed we will inform you before dispatching the order and you will have the option of continuing with the order or not.

We are determined to provide the most accurate pricing information on the Site to our users; however, errors may still occur, such as cases when the price of an item is not displayed correctly on the Site. As such, we reserve the right to refuse or cancel any order. In the event that an item is mispriced, we may, at our own discretion, either contact you for instructions or cancel your order and notify you of such cancellation. We shall have the right to refuse or cancel any such orders whether or not the order has been confirmed and your pre-payment processed. If such a cancellation occurs on your prepaid order, our policies for refund will apply.

Choosing the right payment method is essential in order to shop with online stores. Monarch Mart is accepting payments in very easy and convenient ways. The chart of the payment methods of Monarch Mart is given below:</string>
    <string name="terms3">Cash on Delivery: For orders of any amount including delivery charge is applicable for cash on delivery.</string>

    <string name="terms4">The delivery might take longer than the usual timeframe/line to be followed by Monarch Mart. As per the government law and policy, Monarch Mart will deliver any item that is in physical stock within 10 working days. But, Monarch Mart will do it’s best to hand over your items at its earliest.

Delivery might be delayed due to force majeure event which includes, but not limited to, political unrest, political event, national/public holidays, Covid lockdowns or movement limitations, etc</string>

    <string name="terms5">Monarch Mart retains the right to cancel any order at its sole discretion prior to dispatch and for any reason which may include, but not limited to, the product being mispriced, out of stock, expired, defective, malfunctioned, and containing incorrect information or description arising out of technical or typographical error or for any other reason.</string>
    <string name="terms6">If any order is canceled, the payment against such order shall be refunded within 72 hours to 10 working days, but it may take longer time in exceptional cases that are related with other payment gateways, government authorities or any. Provided that received cash back, bonus, apology amount, gift amount, if any, will be adjusted with the refund amount when applied.</string>


    <string name="terms_question_1">SECTION 1 – GENERAL CONDITIONS</string>
    <string name="terms_question_2">SECTION 2 – PRICING AND PAYMENT METHODS</string>
    <string name="terms_question_3">Payment Method Condition</string>
    <string name="terms_question_4">Delivery Timeline/</string>
    <string name="terms_question_5">Cancellation</string>
    <string name="terms_question_6">Refund Timeline</string>


    <string name="return_policy_question_1">Special Note</string>
    <string name="return_policy_question_2">Refund Timeline</string>
    <string name="return_policy">Return is a scheme provided by respective sellers directly under this policy in terms of which the option of exchange, replacement and/or refund is offered by the respective sellers to you. All products listed under a particular category may not have the same returns policy. For all products, the returns/replacement policy provided on the product page shall prevail over the general returns policy. Do refer the respective items applicable return/replacement policy on the product page for any exceptions to this return policy and the table below. The policy can be partially changed accordingly vendor and product verification. All kinds of refund will be paid on the base of our government police and the real payment of the customer.</string>
    <string name="return_policy1">For any kind of damage issue customer have to complain in front of or in presence of the delivery man or courier office staffs, otherwise it should not be granted. Customers need to do unboxing videos for any items, where the unboxing process, invoice, etc. should be clearly visible for internal and external investigation. For any case where the items is not similar to what customer ordered, the item is broken, parts missing, damaged, etc. then customers are required to send the unboxing videos to ir@monarchmart.com and inform our customer service (+8809638075075) and/or send a message to our Official Facebook Page (www.facebook.com/hellomonarchmart) about the incident.</string>
    <string name="return_policy2">If any order is canceled, the payment against such order shall be refunded within 72 hours to 10 working days, but it may take a longer time in exceptional cases that are related to other payment gateways, government authorities, or any. Provided that received cash back, bonus, apology amount, gift amount, if any, will be adjusted with the refund amount when applied.</string>


</resources>