<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity.TermsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/tint_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Terms"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="-40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageBack"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/terms"
                android:justificationMode="inter_word"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_question_1"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms1"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_question_2"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms2"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_question_3"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms3"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_question_4"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms4"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_question_5"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView8"
                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms5"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_question_6"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView10"
                />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:justificationMode="inter_word"
                android:text="@string/terms6"
                android:textColor="@color/text_color"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView11" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>